--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,9 @@
-<p>products works!</p>
+<ul>
+    <li *ngFor="let prod of products">
+        {{prod.name}} <br />
+        {{prod.description}} <br />
+        {{prod.price}}
+    </li>
+
+
+</ul>
