--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-product-form></app-product-form>
-<app-products></app-products>
+<nav class="navbar navbar-dark bg-dark navbar-collapse">
+  <div class="container">
+    <a class="navbar-brand">Products - Firestore</a>
+  </div>
+</nav>
+<div class="container my-2 p-4">
+  <div class="row">
+    <div class="col-md-5 mb-4">
+      <app-product-form></app-product-form>
+    </div>
+    <div class="col-md-7"><app-products></app-products></div>
+  </div>
+</div>
